# server-test

./: .gitignore  pyproject.toml
chat_model/: apps.py  models.py  serializers.py  urls.py  views.py
chat_model/migrations/: 0001_initial.py
chat_model/model/: logisticRegression.py  model_logic.py  model_test.py  my_model.h5
chat_model/model/dataset/: dataset.csv  my_model.h5  preprocess.py
chat_model/template/: index.html  index_basic.html  index_rest.html
server/: settings.py  urls.py
